fix: follow service